# logreg-simd-accelerated

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  pyproject.toml  setup.py  test_logreg.py
bindings/: py_logreg.cpp
logreg/: LogisticRegression.cpp  dispatcher.cpp  dot_product.cpp  vect_sigmoid.cpp
logreg/include/: LogisticRegression.hpp  cpu_arch.hpp  cpu_features.hpp  logreg_dispatcher.hpp  simd_fn.hpp
utils/: aligned_alloc.cpp
